--- a/Tinder/package.json
+++ b/Tinder/package.json
@@ -13,11 +13,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "moment": "^2.29.3",
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
